# MedShiftLab-CXR

./: .gitignore  README.md  pyproject.toml
figures/: README.md
notebooks/: chexpert_torchxrayvision_frontal_subset_colab.ipynb
results/: README.md
scripts/: audit_chexpert_images.py  build_chexpert_uncertainty_comparison.py  evaluate_chexpert_image_predictions.py  extract_chexpert_image_subset.py  plot_chexpert_image_inference_results.py  plot_dataset_summary.py  prepare_chexpert_internal_protocol.py  prepare_external_validation_protocol.py  prepare_vindr_external_validation_inputs.py  run_baseline_inference.py  run_bootstrap_uncertainty.py  run_calibrated_threshold_evaluation.py  run_cross_dataset_bootstrap_comparison.py  run_evaluation_workflow.py  run_image_loading_smoke_test.py  run_medshiftlab_tests.sh  run_real_prediction_evaluation.py  run_robustness_calibration_analysis.py  run_subgroup_audit.py  run_threshold_sweep.py  run_torchxrayvision_inference.py  run_vindr_inference_scaffold.py  summarize_chexpert_metadata.py  validate_vindr_prediction_schema.py
tests/: test_medshiftlab_adapter_registry.py  test_medshiftlab_baseline_inference.py  test_medshiftlab_bootstrap_uncertainty.py  test_medshiftlab_calibrated_threshold_evaluation.py  test_medshiftlab_chexpert_internal_protocol.py  test_medshiftlab_cross_dataset_bootstrap.py  test_medshiftlab_data_layer.py  test_medshiftlab_data_registry.py  test_medshiftlab_evaluation_metrics.py  test_medshiftlab_evaluation_report.py  test_medshiftlab_evaluation_table.py  test_medshiftlab_evaluation_workflow.py  test_medshiftlab_experiment_export_runner.py  test_medshiftlab_experiment_runner.py  test_medshiftlab_external_validation_protocol.py  test_medshiftlab_image_loader.py  test_medshiftlab_model_adapter.py  test_medshiftlab_package_import.py  test_medshiftlab_prediction_evaluation_bridge.py  test_medshiftlab_prediction_schema.py  test_medshiftlab_readme_links.py  test_medshiftlab_real_data_scripts.py  test_medshiftlab_real_image_inference_scripts.py  test_medshiftlab_real_prediction_evaluation.py  test_medshiftlab_reporting_exports.py  test_medshiftlab_robustness_analysis.py  test_medshiftlab_robustness_export.py  test_medshiftlab_subgroup_audit.py  (+5 more)
(+123 files in other folders)
