[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "medshiftlab-cxr"
version = "0.1.0"
description = "Data-centric evaluation framework for pretrained chest X-ray foundation models under annotation uncertainty and distribution shift."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
