[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "medshiftlab-cxr"
version = "0.1.0"
description = "Data-centric evaluation framework for pretrained chest X-ray foundation models under annotation uncertainty and distribution shift."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pandas>=2,<3",
    "matplotlib>=3.8,<4",
    "PyYAML>=6,<7",
    "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
torchxrayvision = [
    "torch>=2,<3",
    "torchxrayvision>=1,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
